...
                    Provider.of<AuthViewModel>(context, listen: false)
                        .addMessageText(
                      textValue,
                    );
                    await showResultDialog(
                      context: context,
                      dialogText: '保存しました',
                    );
                    navigator.pop();
                  },
                  child: const Text(
                    '保存',
                    style: TextStyle(
                      color: Colors.redAccent,
                      fontSize: 16,
                      fontWeight: FontWeight.bold,
                    ),
                  ),
...
