...
              children: const [
                SizedBox(
                  height: 24,
                  width: 24,
                ),
                Text(
                  '昨日の人気のTATSUJINランキング',
                  style: AppStyles.headStyle,
                ),
                ForwardArrowIcon(),
              ],
            ),
          ),
...
