...
                      ],
                    ),
                    const SizedBox(
                      height: 24,
                    ),
                    const Text(
                      'プロフィール',
                      style: TextStyle(
                        fontSize: 16,
                        fontWeight: FontWeight.bold,
                      ),
                    ),
                    const SizedBox(
...
