...
import '../widgets/icon.dart';
import 'package:tatsujin_guild/widgets/tab_bar.dart';
import 'package:tatsujin_guild/widgets/circular_indicator.dart';

class TimeLinePage extends StatelessWidget {
  TimeLinePage({Key? key}) : super(key: key);
  final List<String> tabContents = const ['ランキング', 'タイムライン'];
  final _controller = ScrollController();

  @override
  Widget build(BuildContext context) {
    return ChangeNotifierProvider(
      create: (_) => TimeLineViewModel(
...
